--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <section  data-aos="fade-up" data-aos-duration="2000">
                 <div class="section products" id="products">
                     <div class="section-headline">
-                        <span class="section-headline__sub">商品ラインナップ</span>
+                        <span class="section-headline__sub">商品一覧</span>
                         <h2 class="section-headline__main">Products</h2>
                     </div>
                     <div class="products-wrap">
