リンク追加

--- a/product.html
+++ b/product.html
@@ -97,7 +97,7 @@
                                         class="mobile-none">
                                     木の温もりとふかふかのクッションであなたを憩いの空間へと誘います。</span>
                             </div>
-                            <a href="" class="btn btn--primary">お問い合わせ</a>
+                            <a href="contact.html" class="btn btn--primary">お問い合わせ</a>
                         </div>
                     </div>
 
