フォームの修正

--- a/contact.html
+++ b/contact.html
@@ -89,21 +89,21 @@
                                 お問い合わせ内容を入力し、送信して下さい。</p>
                             <ul class="formpage-right__table">
                                 <li class="formpage-right__inhalt formpage-right__inhalt--required">お名前 </li>
-                                <li class="formpage-right__wert"><input type="text"></li>
+                                <li class="formpage-right__wert"><input type="text" class="text"></li>
                                 <li class="formpage-right__inhalt formpage-right__inhalt--required">ふりがな </li>
-                                <li class="formpage-right__wert"><input type="text"></li>
+                                <li class="formpage-right__wert"><input type="text" class="text"></li>
                                 <li class="formpage-right__inhalt formpage-right__inhalt--required">電話番号 </li>
-                                <li class="formpage-right__wert"><input type="text"></li>
+                                <li class="formpage-right__wert"><input type="text" class="text"></li>
                                 <li class="formpage-right__inhalt">メールアドレス</li>
-                                <li class="formpage-right__wert"><input type="text"></li>
+                                <li class="formpage-right__wert"><input type="text" class="text"></li>
                                 <li class="formpage-right__inhalt">郵便番号</li>
-                                <li class="formpage-right__wert"><input type="text"></li>
+                                <li class="formpage-right__wert"><input type="text" class="text"></li>
                                 <li class="formpage-right__inhalt formpage-right__inhalt--required">住所 </li>
-                                <li class="formpage-right__wert"><input type="text"></li>
+                                <li class="formpage-right__wert"><input type="text" class="text"></li>
                                 <li class="formpage-right__inhalt formpage-right__inhalt--required">件名 </li>
-                                <li class="formpage-right__wert"><input type="text"></li>
+                                <li class="formpage-right__wert"><input type="text" class="text"></li>
                                 <li class="formpage-right__inhalt formpage-right__inhalt--required">お問い合わせ内容 </li>
-                                <li class="formpage-right__wert"><textarea name="入力欄の名前" rows="6" cols="45.9">
+                                <li class="formpage-right__wert"><textarea name="入力欄の名前" class="textarea">
 
                                       </textarea></li>
                                 <li class="formpage-right__inhalt"></li>
